--- a/macobrowse.html
+++ b/macobrowse.html
@@ -29,106 +29,80 @@
     <!-- Replace mypurecloud.com with the hostname for your PureCloud region -->
     <script src="https://apps.mypurecloud.com/webchat/jsapi-v1.js" type="text/javascript"></script>
 	
-	<script
-  id="purecloud-webchat-js"
-  type="text/javascript"
-  src="https://apps.mypurecloud.com/webchat/jsapi-v1.js"
-  region="us-east-1"
-  org-guid="01c443c8-3a84-4a4f-a861-6c5be3d609b8"
-  deployment-key="3f4785fd-960a-4b4b-879f-9b0ab6acc452"
-></script>
+    <script
+    id="purecloud-webchat-js"
+    type="text/javascript"
+    src="https://apps.usw2.pure.cloud/webchat/jsapi-v1.js"
+    region="us-west-2"
+    org-guid="e4b19b64-da2d-409e-9428-36dfbdbcfb63"
+    deployment-key="af0257dc-81db-4c8b-878e-d5d2cfd2ad17"
+  ></script>
 <!-- deployment-key above is for general chat deployment-key NOT the deployment-key for co-browse -->
 	  
     <script type="text/javascript">
-    let genesysWebchat = (function() {
-        function createChatConfig(){
-            let firstName = document.getElementById('firstName').value;
-            let lastName = document.getElementById('lastName').value;
-            let agentEmail = document.getElementById('agentEmail').value;
+   
 
-            // For additional web chat config options, see web chat documentation. This example excludes some of the optional values.
-            return {
-                // Web chat application URL
-                "webchatAppUrl": "https://apps.mypurecloud.com/webchat",
+let chatConfig = {
+  "webchatAppUrl": "https://apps.usw2.pure.cloud/webchat",
+  "webchatServiceUrl": "https://realtime.usw2.pure.cloud:443",
+  "orgId": "2194",
+  "orgGuid": "e4b19b64-da2d-409e-9428-36dfbdbcfb63",
+  "orgName": "nmoritzdev",
+  "queueName": "Helpdesk",
+  "logLevel": "DEBUG",
+  "locale": "en",
+  "data": {
+    "firstName": "Dale",
+    "lastName": "Chiti",
+    "addressStreet": "701 Fejuh Key",
+    "addressCity": "Aknukwov",
+    "addressPostalCode": "64721",
+    "addressState": "GA",
+    "phoneNumber": "(908) 327-3318",
+    "customField1Label": "",
+    "customField1": "",
+    "customField2Label": "",
+    "customField2": "",
+    "customField3Label": "",
+    "customField3": ""
+  },
+  "companyLogo": {
+    "width": 600,
+    "height": 149,
+    "url": "https://d3a63qt71m2kua.cloudfront.net/developer-tools/1778/assets/images/PC-blue-nomark.png"
+  },
+  "companyLogoSmall": {
+    "width": 25,
+    "height": 25,
+    "url": "https://d3a63qt71m2kua.cloudfront.net/developer-tools/1778/assets/images/companylogo.png"
+  },
+  "agentAvatar": {
+    "width": 462,
+    "height": 462,
+    "url": "https://d3a63qt71m2kua.cloudfront.net/developer-tools/1778/assets/images/agent.jpg"
+  },
+  "welcomeMessage": "Thanks for chatting using the dev tools chat page.",
+  "cssClass": "webchat-frame",
+  "css": {
+    "width": "100%",
+    "height": "100%"
+  }
+};
 
-                // Web chat service URL
-                "webchatServiceUrl": "https://realtime.mypurecloud.com:443",
+ININ.webchat.create(chatConfig, function(err, webchat) {
+    if (err) {
+        console.error(err);
+        throw err;
+    }
 
-                // Numeric organization ID
-                "orgId": 15883,
+    webchat.renderPopup({
+        width: 400,
+        height: 400,
+        title: 'Chat'
+    });
+});
 
-                // Organization name
-                "orgName": "mps",
 
-                // Target agent email (OPTIONAL)
-                //"agentEmail": agentEmail,
-
-                // Queue Name
-                queueName : 'Decker Chat Queue',
-
-                // Log level
-                "logLevel": "DEBUG",
-
-                // Locale code
-                "locale": "en",
-                // Logo used at the top of the chat window
-                "companyLogo": {
-                    "width": 600,
-                    "height": 149,
-                    "url": "https://d3a63qt71m2kua.cloudfront.net/developer-tools/1275/assets/images/PC-blue-nomark.png"
-                },
-
-                // Logo used within the chat window
-                "companyLogoSmall": {
-                    "width": 149,
-                    "height": 149,
-                    "url": "https://d3a63qt71m2kua.cloudfront.net/developer-tools/1275/assets/images/companylogo.png"
-                },
-
-                // Image used for agent
-                "agentAvatar": {
-                    "width": 462,
-                    "height": 462,
-                    "url": "https://d3a63qt71m2kua.cloudfront.net/developer-tools/1275/assets/images/agent.jpg"
-                },
-
-                // Text displayed when the chat window opens
-                "welcomeMessage": "Thanks for chatting.",
-
-                // CSS class applied to the chat window
-                "cssClass": "webchat-frame",
-
-                // Custom style applied to the chat window
-                "css": {
-                    "width": "100%",
-                    "height": "100%"
-                },
-
-                // Deployment key for your cobrowse deployment from PureCloud admin UI
-                "cobrowseConfig": {
-                    "deploymentKey": "3f4785fd-960a-4b4b-879f-9b0ab6acc452",
-                }
-				//deployment-key above is for co-browse deployment-key NOT the deployment-key for general chat
-            };
-        }
-        return {
-            startEmbeddedChat: function() {
-                let chatConfig = createChatConfig();
-                ININ.webchat.create(chatConfig, function(err, webchat) {
-                    if (err) {
-                        console.error('Unable to share page', (err.stack || err));
-                        return;
-                    }
-
-                    //Render to frame
-                    webchat.renderFrame({
-                        containerEl: 'chatContainer'
-                    });
-
-                });
-            }
-        }
-    })();
     </script>
 	
 <script>
