--- a/maguestchat.html
+++ b/maguestchat.html
@@ -127,7 +127,7 @@
             // For additional web chat config options, see web chat documentation. This example excludes some of the optional values.
             return {
                 // Web chat application URL
-                "webchatAppUrl": "https://apps.mypurecloud.com/webchat",
+                "webchatAppUrl": "https://apps.usw2.pure.cloud/webchat",
 
                 // Web chat service URL
                 "webchatServiceUrl": "https://realtime.mypurecloud.com:443",
@@ -213,7 +213,7 @@
   (function(a,t,c,l,o,u,d){a['_genesysJourneySdk']=o;a[o]=a[o]||function(){
   (a[o].q=a[o].q||[]).push(arguments)},a[o].l=1*new Date();u=t.createElement(c),
   d=t.getElementsByTagName(c)[0];u.async=1;u.src=l;u.charset='utf-8';d.parentNode.insertBefore(u,d)
-  })(window, document, 'script', 'https://apps.mypurecloud.com/journey/sdk/js/web/v1/ac.js', 'ac');
+  })(window, document, 'script', 'https://apps.usw2.pure.cloud/journey/sdk/js/web/v1/ac.js', 'ac');
   ac('init', 'cc329c9f-a78c-4788-8808-6fdf739234f7', { region: 'use1' });
   ac('pageview');
 </script>
