--- a/macobrowse.html
+++ b/macobrowse.html
@@ -27,7 +27,7 @@
     <div id="chatContainer" style="height:600px"></div>
 
     <!-- Replace mypurecloud.com with the hostname for your PureCloud region -->
-    <script src="https://apps.mypurecloud.com/webchat/jsapi-v1.js" type="text/javascript"></script>
+    <script src="https://apps.usw2.pure.cloud/webchat/jsapi-v1.js" type="text/javascript"></script>
 	
     <script
     id="purecloud-webchat-js"
@@ -106,7 +106,7 @@
 
               // Deployment key for your cobrowse deployment from PureCloud admin UI
               "cobrowseConfig": {
-                  "deploymentKey": "3f4785fd-960a-4b4b-879f-9b0ab6acc452",
+                  "deploymentKey": "af0257dc-81db-4c8b-878e-d5d2cfd2ad17",
               }
       //deployment-key above is for co-browse deployment-key NOT the deployment-key for general chat
           };
