--- a/maguestchatnewwindow.html
+++ b/maguestchatnewwindow.html
@@ -95,7 +95,7 @@
     <script
     id="purecloud-webchat-js"
     type="text/javascript"
-    src="https://apps.usw2.pure.cloud/webchat/jsapi-v1.js"
+    src="https://apps.mypurecloud.com/webchat/jsapi-v1.js"
     region="us-west-2"
     org-guid="e4b19b64-da2d-409e-9428-36dfbdbcfb63"
     deployment-key="af0257dc-81db-4c8b-878e-d5d2cfd2ad17"
