--- a/mawebchat.html
+++ b/mawebchat.html
@@ -10,7 +10,7 @@
 				  interactionData: {
 					  routing: {
 						  targetType: "QUEUE",
-						  targetAddress: "Decker Chat Queue",
+						  targetAddress: "Helpdesk",
 						  priority: 2
 					  }
 				  }
