--- a/maguestchatnewwindow.html
+++ b/maguestchatnewwindow.html
@@ -95,11 +95,11 @@
     <script
     id="purecloud-webchat-js"
     type="text/javascript"
-    src="https://apps.mypurecloud.com/webchat/jsapi-v1.js"
+    src="https://apps.usw2.pure.cloud/webchat/jsapi-v1.js"
     region="us-west-2"
     org-guid="e4b19b64-da2d-409e-9428-36dfbdbcfb63"
     deployment-key="af0257dc-81db-4c8b-878e-d5d2cfd2ad17"
-></script>
+  ></script>
 <!-- deployment-key above is for general chat deployment-key NOT the deployment-key for co-browse -->
 	  
 <script type="text/javascript">
@@ -130,19 +130,19 @@
                 "webchatAppUrl": "https://apps.usw2.pure.cloud/webchat",
 
                 // Web chat service URL
-                "webchatServiceUrl": "https://realtime.mypurecloud.com:443",
+                "webchatServiceUrl": "https://realtime.usw2.pure.cloud:443",
 
                 // Numeric organization ID
-                "orgId": 15883,
+                "orgId": 2194,
 
                 // Organization name
-                "orgName": "mps",
+                "orgName": "nmoritzdev",
 
                 // Target agent email (OPTIONAL)
                 //"agentEmail": agentEmail,
 
                 // Queue Name
-                queueName : 'Decker Chat Queue',
+                queueName : "Helpdesk",
 
                 // Log level
                 "logLevel": "DEBUG",
