--- a/macobrowse.html
+++ b/macobrowse.html
@@ -52,19 +52,19 @@
               "webchatAppUrl": "https://apps.usw2.pure.cloud/webchat",
 
               // Web chat service URL
-              "webchatServiceUrl": "https://realtime.mypurecloud.com:443",
+              "webchatServiceUrl": "https://realtime.usw2.pure.cloud:443",
 
               // Numeric organization ID
-              "orgId": 15883,
+              "orgId": 2194,
 
               // Organization name
-              "orgName": "mps",
+              "orgName": "nmoritzdev",
 
               // Target agent email (OPTIONAL)
               //"agentEmail": agentEmail,
 
               // Queue Name
-              queueName : 'Decker Chat Queue',
+              queueName : 'Helpdesk',
 
               // Log level
               "logLevel": "DEBUG",
@@ -133,14 +133,14 @@
 
     </script>
 	
-<script>
+<!-- <script>
   (function(a,t,c,l,o,u,d){a['_genesysJourneySdk']=o;a[o]=a[o]||function(){
   (a[o].q=a[o].q||[]).push(arguments)},a[o].l=1*new Date();u=t.createElement(c),
   d=t.getElementsByTagName(c)[0];u.async=1;u.src=l;u.charset='utf-8';d.parentNode.insertBefore(u,d)
-  })(window, document, 'script', 'https://apps.usw2.pure.cloud/journey/sdk/js/web/v1/ac.js', 'ac');
-  ac('init', 'cc329c9f-a78c-4788-8808-6fdf739234f7', { region: 'use1' });
+  })(window, document, 'script', 'https://app.mypurecloud.com/journey/sdk/js/web/v1/ac.js', 'ac');
+  ac('init', 'cc329c9f-a78c-4788-8808-6fdf739234f7', { region: 'usw2' });
   ac('pageview');
-</script>	
+</script>	 -->
 
 </body>
 </html>
