--- a/mawebchat.html
+++ b/mawebchat.html
@@ -34,7 +34,7 @@
   };
   </script>
   
-   <script src="https://apps.mypurecloud.com/widgets/9.0/cxbus.min.js" onload="javascript:CXBus.configure({debug:false,pluginsPath:'https://apps.mypurecloud.com/widgets/9.0/plugins/'}); CXBus.loadPlugin('widgets-core');"></script>
+   <script src="https://apps.usw2.pure.cloud/widgets/9.0/cxbus.min.js" onload="javascript:CXBus.configure({debug:false,pluginsPath:'https://apps.mypurecloud.com/widgets/9.0/plugins/'}); CXBus.loadPlugin('widgets-core');"></script>
   
 	  <script>
 	  const customPlugin = CXBus.registerPlugin('Custom');
@@ -109,7 +109,7 @@
 	  <button type="button" id="chat-button" onclick="customPlugin.command('WebChat.open', getAdvancedConfig());">Start Chat (with data)</button>
   
   
-  <script>
+  <!-- <script>
 	(function(a,t,c,l,o,u,d){a['_genesysJourneySdk']=o;a[o]=a[o]||function(){
 	(a[o].q=a[o].q||[]).push(arguments)},a[o].l=1*new Date();u=t.createElement(c),
 	d=t.getElementsByTagName(c)[0];u.async=1;u.src=l;u.charset='utf-8';d.parentNode.insertBefore(u,d)
@@ -117,6 +117,6 @@
 	ac('init', 'cc329c9f-a78c-4788-8808-6fdf739234f7', { region: 'use1' });
 	ac('pageview');
   </script>  
-  
+   -->
   </body>
   </html>	
